Fix Audio tracklist is shifted #82

--- a/src/pages/_titlePage.scss
+++ b/src/pages/_titlePage.scss
@@ -132,6 +132,10 @@
 	.listItem {
 		flex-flow: column !important;
 	}
+	.listItem[data-mediatype="Audio"] {
+		flex-flow: row !important;
+		grid-column: auto / span 3;
+	}
 }
 
 // mobile
